@@ -3,6 +3,9 @@ Changes made from the "0.6.5" release to the "0.7" release:
 
 * Bertrand Coconnier:
 
+- Removed explicit calls to glGetString(GL_VERSION) and
+  glGetString(GL_EXTENSIONS) in glcContext() since GLEW already takes care of
+  that.
 - Fixed bug #1843710 (Code to handle missing FTC_Manager_* is broken).
 - GLC_LINE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
   supports them
